5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1585_842.log
== TEST (2019-03-25 13:19:18) 
-- CODE:
n=int(input("insira um numero de quatro digitos: ")
x1=n//1000
x2=(n//100)-(x1*10)
x3=(n//10)-(n//100)*10
x4=n-n//10*10
print(x1+x2+x3+x4)

-- ERROR:
File "XXXX", line 2
    x1=n//1000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:20:42) 
-- CODE:
n=int(input("insira um numero de quatro digitos: ")
x1= n//1000
x2= (n//100)-(x1*10)
x3= (n//10)-(n//100)*10
x4= n-(n//10)*10
print(x1+x2+x3+x4)

-- ERROR:
File "XXXX", line 2
    x1= n//1000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:21:29) 
-- CODE:
n =int(input("insira um numero de quatro digitos: ")
x1 = n//1000
x2 = (n//100)-(x1*10)
x3 = (n//10)-(n//100)*10
x4 = n-(n//10)*10
print(x1+x2+x3+x4)

-- ERROR:
File "XXXX", line 2
    x1 = n//1000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:21:46) 
-- CODE:
n = int(input("insira um numero de quatro digitos: ")
x1 = n//1000
x2 = (n//100)-(x1*10)
x3 = (n//10)-(n//100)*10
x4 = n-(n//10)*10
print(x1+x2+x3+x4)

-- ERROR:
File "XXXX", line 2
    x1 = n//1000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:22:39) 
-- CODE:
n = int(input("insira um numero de quatro digitos: ")
x1 = n//1000
x2 = (n//100)-(n//1000*10)
x3 = (n//10)-(n//100)*10
x4 = n-(n//10)*10
print(x1+x2+x3+x4)

-- ERROR:
File "XXXX", line 2
    x1 = n//1000
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:23:32) 
-- CODE:
n = int(input("insira um numero de quatro digitos: "))
x1 = n//1000
x2 = (n//100)-(n//1000*10)
x3 = (n//10)-(n//100)*10
x4 = n-(n//10)*10
print(x1+x2+x3+x4)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:23:50) 
-- CODE:
n = int(input("insira um numero de quatro digitos: "))
x1 = n//1000
x2 = (n//100)-(n//1000*10)
x3 = (n//10)-(n//100)*10
x4 = n-(n//10)*10
print(x1+x2+x3+x4)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:24:17) 
-- CODE:
n = int(input("insira um numero de quatro digitos: "))
x1 = n//1000
x2 = (n//100)-(n//1000*10)
x3 = (n//10)-(n//100)*10
x4 = n-(n//10)*10
print(x1+x2+x3+x4)

-- EXECUTION TIME:
0.135772
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:08) 
-- CODE:
n = int(input("insira um numero de quatro digitos: "))
x1 = n//1000
x2 = (n//100)-(n//1000*10)
x3 = (n//10)-(n//100)*10
x4 = n-(n//10)*10
print(x1+x2+x3+x4)

-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
